# generative-ocr

./: .gitignore  README.md  aws.py  ocr.py  pyproject.toml  test.py
